tests/virtualservice_forbidden_hosts/manifests/vs-with-allowed-host.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-with-allowed-host
  namespace: check-kyverno
spec:
  hosts:
  - allowed-host.example.com
  http:
  - route:
    - destination:
        host: valid-service
